--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html body {
 
 @layer base {
   :root {
-    --gradient: linear-gradient(to top left, #094366, #0d6a9f, #2596be);
+    --gradient: linear-gradient(to top left, #ff3f04, #0d6a9f, #2596be);
     --background: 255 100% 100%; /* Set background to white */
     --foreground: 204 30% 10%;
     --muted: 204 20% 92%;
@@ -62,7 +62,7 @@ html body {
 
   /* Auth layout specific theme */
   .auth-layout {
-    --gradient: linear-gradient(to top left, #094366, #0d6a9f, #2596be);
+    --gradient: linear-gradient(to top left, rgb(243, 191, 20), #0d6a9f, #2596be);
     --background: 255 100% 100%; /* Set auth background to white */
     --foreground: 204 30% 10%;
     --muted: 204 20% 92%;
